--- a/client/src/App.css
+++ b/client/src/App.css
@@ -369,7 +369,7 @@ button {
   border-radius: 10px;
 }
 .profile-img {
-  width: 200px;
+  height: 200px;
   width: 200px;
   border-radius: 50%;
   border: 5px #ffffff solid;
