--- a/client/src/App.css
+++ b/client/src/App.css
@@ -60,7 +60,9 @@ img {
 
 .lead {
   font-size: 1.5rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 5px;
+  color: #215a75;
+  font-weight: 600;
 }
 
 .text-center {
@@ -135,7 +137,7 @@ img {
   font-size: 1rem;
   border: none;
   cursor: pointer;
-  margin-right: 0.5rem;
+  margin: 0.5rem 1px 1px 1px;
   transition: opacity 0.2s ease-in;
   outline: none;
   border-radius: 4px;
@@ -178,7 +180,7 @@ img {
 .bg-dark,
 .badge-dark,
 .alert-dark {
-  background: var(--dark-color);
+  background: var(--primary-color);
   color: #fff;
 }
 
@@ -209,6 +211,12 @@ img {
 
 .btn:hover {
   opacity: 0.8;
+}
+
+.btn:focus {
+  background: #215a75a6;
+
+  border: #333 solid 2px;
 }
 
 .bg-light,
@@ -589,7 +597,11 @@ button {
     width: 100%;
     margin-bottom: 0.2rem;
   }
-
+  .dash-buttons button {
+    display: block;
+    width: 100%;
+    margin-bottom: 0.2rem;
+  }
   .post {
     grid-template-columns: 1fr;
   }
