--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,10 +36,10 @@ img {
 
 /* Utilities */
 .container {
-  max-width: 720px;
+  max-width: 640px;
   margin: auto;
   overflow: hidden;
-  padding: 0 0.5rem;
+
   margin-top: 3.8rem;
   margin-bottom: 3rem;
 }
@@ -80,6 +80,7 @@ img {
   margin-bottom: 4px;
   color: #333333;
   font-weight: 400;
+  padding-left: 10px;
   margin-top: 20px;
 }
 
@@ -99,6 +100,9 @@ img {
 }
 
 /* Padding */
+.p-11 {
+  padding: 0 0.1rem;
+}
 .p {
   padding: 0.1rem;
 }
@@ -286,6 +290,16 @@ img {
   height: 100%;
 }
 
+.light-overlay {
+  background-color: #bbb;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 90%;
+  margin-top: 3.8rem;
+}
+
 /* Forms */
 .form .form-group {
   margin: 1.2rem 0;
@@ -396,7 +410,10 @@ button {
   background: url("../src/img/bg1.png") no-repeat center center/cover;
   height: 100vh;
 }
-
+.post-full {
+  position: relative;
+  height: 100vh;
+}
 .landing-inner {
   color: #fff;
   height: 100%;
@@ -533,15 +550,43 @@ button {
   border-radius: 10px;
 }
 
+.post-large {
+  display: grid;
+  grid-template-columns: 7.8fr 4fr;
+  grid-gap: 0.5rem;
+  height: 90vh;
+}
+
 .post > div:first-child {
   display: inline-block;
+}
+.postImage {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5px;
+  max-height: 420px;
+  /* fits image  */
+  object-fit: contain;
+}
+.postImageLarge {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 100%;
+
+  height: 100%;
+  /* fits image  */
+  object-fit: contain;
 }
 
 .post-profile {
   height: 60px;
   width: 60px;
-  border-radius: 50%;
-  border: 1px var(--primary-color) solid;
+  border-radius: 100%;
+  padding: 5px;
   filter: drop-shadow(2px 2px 2px #444444);
 }
 
@@ -572,6 +617,9 @@ button {
   .navbar ul {
     font-size: 16px;
   }
+  .post-large {
+    grid-template-rows: 6fr 4fr;
+  }
 
   .hide-sm {
     display: none;
@@ -585,6 +633,10 @@ button {
 
   .large {
     font-size: 2rem;
+  }
+
+  .small {
+    font-size: 5px;
   }
 
   .lead {
@@ -621,6 +673,13 @@ button {
   .post .post-date {
     color: #aaa;
     font-size: 0.5rem;
+  }
+  .postImage {
+    margin: 0;
+    padding: 0;
+    max-height: 500px;
+    width: 100%;
+    height: 100%;
   }
 
   /* Profiles Page */
