--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,6 +42,9 @@ img {
 
   margin-top: 3.8rem;
   margin-bottom: 3rem;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 4px;
 }
 
 /* Text Styles*/
@@ -159,15 +162,29 @@ img {
   background: var(--light-color);
   color: var(--primary-color);
   padding: 0.4rem 1.3rem;
-  font-size: 1rem;
+  font-size: 0.8rem;
   border: none;
   cursor: pointer;
   margin: 0.5rem 1px 1px 1px;
   transition: opacity 0.2s ease-in;
   outline: none;
   border-radius: 4px;
+  text-align: center;
 }
+.btn-comment {
+  display: inline-block;
+  background: var(--light-color);
+  color: var(--primary-color);
+  padding: 0 0.5rem;
+  font-size: 0.8rem;
+  border: none;
+  cursor: pointer;
 
+  transition: opacity 0.2s ease-in;
+  outline: none;
+  border-radius: 4px;
+  text-align: center;
+}
 .btn-post {
   display: flex;
   align-items: center;
@@ -182,6 +199,10 @@ img {
   transition: opacity 0.2s ease-in;
   outline: none;
   border-radius: 4px;
+}
+
+.btn-width {
+  width: 33%;
 }
 
 .badge {
@@ -356,9 +377,14 @@ button {
   color: #0077b5;
 }
 
+.table {
+  width: 100%;
+}
+
 .table th,
 .table td {
   padding: 0.2rem;
+  font-size: 12px;
 }
 
 .table th {
@@ -542,6 +568,9 @@ button {
   padding: 0.5rem;
 }
 
+.posts {
+  padding-top: 10px;
+}
 .post {
   display: grid;
   grid-template-rows: 0.5fr 4fr 0.1fr;
@@ -554,9 +583,16 @@ button {
   display: grid;
   grid-template-columns: 7.8fr 4fr;
   grid-gap: 0.5rem;
-  height: 90vh;
+  height: 100%;
+  background-color: #eee;
 }
 
+.postContainer {
+  position: relative;
+
+  background: #eee;
+  width: 100%;
+}
 .post > div:first-child {
   display: inline-block;
 }
@@ -577,17 +613,17 @@ button {
   padding-bottom: 10px;
   width: 100%;
 
-  height: 100%;
+  max-height: 92vh;
   /* fits image  */
   object-fit: contain;
 }
 
 .post-profile {
-  height: 60px;
-  width: 60px;
+  height: 50px;
+  width: 50px;
   border-radius: 100%;
-  padding: 5px;
-  filter: drop-shadow(2px 2px 2px #444444);
+  border: 1px #eee solid;
+  filter: drop-shadow(1px 1px 4px #444444);
 }
 
 .post .comment-count {
@@ -598,9 +634,38 @@ button {
   font-size: 0.8rem;
 }
 
-.post .post-date {
+.post .post-date,
+.comment .post-date {
   color: #aaa;
   font-size: 0.7rem;
+}
+
+.comment {
+  display: flex;
+  flex-direction: column;
+
+  border-radius: 10px;
+}
+
+.commentFont {
+  font-size: 13px;
+  text-align: justify;
+  padding: 10px 10px;
+  margin: 4px;
+  white-space: pre-line;
+  color: #333;
+}
+.f {
+  font-size: xx-small;
+}
+.f-1 {
+  font-size: x-small;
+}
+.f-2 {
+  font-size: smaller;
+}
+.f-3 {
+  font-size: small;
 }
 
 /* Mobile Styles */
@@ -611,16 +676,29 @@ button {
   .btn-post p {
     display: none;
   }
+  .btnTitle p {
+    display: none;
+  }
   .navbar {
     padding: 0.1rem 0.35rem;
   }
   .navbar ul {
     font-size: 16px;
   }
-  .post-large {
-    grid-template-rows: 6fr 4fr;
+  .btn-width {
+    width: 32%;
   }
-
+  .post-large {
+    grid-template-columns: 1fr;
+    grid-gap: 0.1rem;
+  }
+  .postImageLarge {
+    padding: 0;
+    margin: 0;
+  }
+  .light-overlay {
+    background-color: #fff;
+  }
   .hide-sm {
     display: none;
   }
@@ -715,11 +793,15 @@ button {
     flex-direction: column;
   }
 
-  .dash-buttons a {
-    display: block;
+  .dash-buttons {
     width: 100%;
-    margin-bottom: 0.2rem;
   }
+  .btnTitle {
+    display: flex;
+    justify-content: space-around;
+    margin: auto;
+  }
+
   .dash-buttons button {
     display: block;
     width: 100%;
