--- a/client/src/App.css
+++ b/client/src/App.css
@@ -473,6 +473,65 @@ button {
   filter: drop-shadow(4px 4px 4px #444444);
 }
 
+/* ID */
+
+.id-container {
+  display: flex;
+  flex-direction: column;
+  height: 89vh;
+  width: 55%;
+  align-items: center;
+  margin: auto;
+  border: 1px solid #444;
+  box-shadow: 3px 3px #888888;
+  padding: 10px;
+  border-radius: 20px;
+  /* background: url("../src/img/bg1.png") no-repeat center center/cover; */
+  background-color: #eee;
+}
+
+.id-container p {
+  color: #888;
+  text-align: center;
+  font-size: 12px;
+}
+
+.id-container-name {
+  background: #fff;
+  width: 100%;
+  height: 10%;
+  text-align: center;
+  color: #333;
+  padding: 8px;
+}
+.id-container-access {
+  background: green;
+  width: 100%;
+  text-align: center;
+  color: white;
+  height: 10%;
+  padding: 15px;
+}
+.id-container-validity {
+  width: 100%;
+  background-color: #dc3545;
+  color: white;
+  text-align: center;
+  font-size: 15px;
+}
+.item-a {
+  grid-area: photo;
+}
+.item-b {
+  grid-area: name;
+}
+.item-c {
+  grid-area: exp;
+}
+.item-d {
+  grid-area: footer;
+}
+
 /* Profile Page */
 .profile-grid {
   display: grid;
@@ -624,6 +683,7 @@ button {
   border-radius: 100%;
   border: 1px #eee solid;
   filter: drop-shadow(1px 1px 4px #444444);
+  margin: auto;
 }
 
 .post .comment-count {
@@ -703,6 +763,21 @@ button {
     display: none;
   }
 
+  .id-container {
+    width: 98%;
+  }
+  .id-container-access {
+    font-size: 22px;
+    padding: 16px 0px 16px 0;
+  }
+  .id-container-name {
+    font-size: x-large;
+    padding: 3px;
+  }
+  .id-container-validity {
+    height: 30px;
+    font-size: 18px;
+  }
   /* Text Styles */
   .x-large {
     font-size: 3rem;
@@ -969,13 +1044,24 @@ button {
 }
 
 .qr-code {
-  display: flex;
+  display: block;
   width: 195px;
   height: 195px;
   border: 5px #e4e4e4 solid;
   border-radius: 10px;
   align-items: center;
   justify-content: center;
+}
+
+.qr-code-id {
+  position: flex;
+  padding: 2px;
+  width: 155px;
+  height: 155px;
+  border: 3px #eee solid;
+  border-radius: 5px;
+  margin: auto;
+  align-items: center;
 }
 
 .image-preview {
