--- a/client/src/App.css
+++ b/client/src/App.css
@@ -651,6 +651,7 @@ button {
 
   background: #eee;
   width: 100%;
+  height: 100vh;
 }
 .post > div:first-child {
   display: inline-block;
@@ -671,6 +672,7 @@ button {
   padding-top: 10px;
   padding-bottom: 10px;
   width: 100%;
+  height: 90%;
 
   max-height: 92vh;
   /* fits image  */
@@ -755,6 +757,10 @@ button {
   .postImageLarge {
     padding: 0;
     margin: 0;
+    height: auto;
+  }
+  .postContainer {
+    height: auto;
   }
   .light-overlay {
     background-color: #fff;
@@ -1062,6 +1068,16 @@ button {
   border-radius: 5px;
   margin: auto;
   align-items: center;
+}
+
+.qr-code-id-big {
+  display: flex;
+  padding: 2px;
+  width: 350px;
+  height: 350px;
+  border: 3px #eee solid;
+  border-radius: 5px;
+  margin: auto;
 }
 
 .image-preview {
