--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1201,7 +1201,7 @@ button {
 /* OPcen */
 
 .bigIcon {
-  height: 200px;
+  height: 160px;
   width: 200px;
   text-align: center;
 
@@ -1209,4 +1209,17 @@ button {
   border-radius: 5px;
   padding: 10px;
   margin: 5px;
+  cursor: pointer;
+}
+
+.smallIcon {
+  height: 140px;
+  width: 150px;
+  text-align: center;
+
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  margin: auto;
+  cursor: pointer;
 }
