--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,10 @@
   --danger-color: #dc3545;
   --success-color: #28a745;
 }
+::placeholder {
+  font-size: 14px;
+  font-family: "Inter", sans-serif;
+}
 
 * {
   box-sizing: border-box;
@@ -1202,8 +1206,8 @@ button {
 /* OPcen */
 
 .bigIcon {
-  height: 140px;
-  width: 140px;
+  height: 150px;
+  width: 150px;
   text-align: center;
   border: 1px solid #ddd;
   border-radius: 5px;
@@ -1221,4 +1225,132 @@ button {
   padding: 10px;
   margin: auto;
   cursor: pointer;
+}
+
+.modal {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 50px;
+  bottom: 0;
+  background-color: #bbb;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+  opacity: 0.97;
+  transition: all 0.8s ease-in-out;
+}
+
+.modal-content {
+  width: 500px;
+  height: 600px;
+  background-color: var(--primary-color);
+  border-radius: 40px;
+}
+
+.modal-header,
+.modal-footer {
+  padding: 2px;
+}
+
+.modal-title {
+  margin: 0;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 0.5fr 1.5fr 1.5fr 0.5fr;
+  grid-template-rows: 1fr 1fr 0.7fr;
+  gap: 5px 5px;
+  grid-template-areas:
+    "Ambulance Ambulance Police Police"
+    "Fire Fire General General"
+    "Corona Corona Corona Corona";
+  color: #eee;
+}
+/* .grid-container > * {
+  margin: auto;
+} */
+.Ambulance {
+  grid-area: Ambulance;
+  border-radius: 40px 0 0 0;
+}
+
+.Police {
+  grid-area: Police;
+  border-radius: 0 40px 0 0;
+}
+
+.Fire {
+  grid-area: Fire;
+}
+
+.General {
+  grid-area: General;
+}
+
+.Corona {
+  grid-area: Corona;
+  border: 2px solid #fff;
+  height: 130px;
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  border-radius: 0 0 40px 40px;
+  font-weight: 300;
+  font-size: 25px;
+  justify-content: space-evenly;
+  align-items: center;
+  cursor: pointer;
+  box-shadow: 10px 10px 13px -7px rgba(0, 0, 0, 0.91);
+  -webkit-box-shadow: 10px 10px 13px -7px rgba(0, 0, 0, 0.91);
+  -moz-box-shadow: 10px 10px 13px -7px rgba(0, 0, 0, 0.91);
+}
+
+.emergencyicon {
+  border: 2px solid #fff;
+  padding: 20px;
+  width: 100%;
+  height: 230px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  font-weight: 300;
+  font-size: 25px;
+  cursor: pointer;
+  box-shadow: 10px 10px 13px -7px rgba(0, 0, 0, 0.91);
+  -webkit-box-shadow: 10px 10px 13px -7px rgba(0, 0, 0, 0.91);
+  -moz-box-shadow: 10px 10px 13px -7px rgba(0, 0, 0, 0.91);
+}
+
+.emergencyimg {
+  height: 90px;
+  -webkit-filter: drop-shadow(5px 5px 5px #222);
+  filter: drop-shadow(5px 5px 5px #222);
+}
+.emergencyicon:hover {
+  opacity: 0.3;
+  -webkit-filter: drop-shadow(5px 5px 5px #fff);
+  filter: drop-shadow(5px 5px 5px #fff);
+}
+
+.Corona:hover {
+  opacity: 0.3;
+  -webkit-filter: drop-shadow(5px 5px 5px #fff);
+  filter: drop-shadow(5px 5px 5px #fff);
+}
+.emergencybtn {
+  width: 100px;
+  position: fixed;
+  right: 5%;
+  bottom: 5%;
+  cursor: pointer;
+  -webkit-filter: drop-shadow(5px 5px 5px #333);
+  filter: drop-shadow(3px 3px 3px #333);
+}
+
+.emergencybtn:hover {
+  opacity: 0.8;
 }
